test/errors/array_types_error/zs/implicit_array_not_last_error.zs
package implicit_array_not_last_error;

struct ImplicitArrayNotLastError
{
    implicit int32  array[];   // implicit arrays must be at the end
    uint16          wrong;
};
